--- a/courses.html
+++ b/courses.html
@@ -108,7 +108,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-4">
 					<div class="featured-box"> 
 						<div class="text">
-							<h3>ReCBSE</h3>
+							<h3>CBSE</h3>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 						</div>
 					</div>
