--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <a href="about.html" title="read more" class="btn-inline " >Read More ...</a></div>
               
           
-          <div class="col-md-4"><div class="title-box clearfix "><h2 class="title-box_primary">Up Coming Courses</h2></div> 
+          <!-- <div class="col-md-4"><div class="title-box clearfix "><h2 class="title-box_primary">Up Coming Courses</h2></div>  -->
             <div class="list styled custom-list">
             <ul>
             <li><a title="Snatoque penatibus et magnis dis partu rient montes ascetur ridiculus mus." href="#">Mathematics and Computer Science</a></li>
