--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
     </div>
-    <section style="width: 100%; height: 50vh; padding-top: 2rem; padding-left: 60px;">
+    <!-- <section style="width: 100%; height: 50vh; padding-top: 2rem; padding-left: 60px;">
       <p style="font-size: 3rem; font-weight: 700;">Upcoming Classes</p>
-    </section>
+    </section> -->
       <section class="news-box top-margin">
         <div class="container">
             <h2><span>parents Feedback </span></h2>
