--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             
 					<div class="fluid_container">                       
                     <div class="camera_wrap camera_emboss pattern_1" id="camera_wrap_4">
-                        <div data-thumb="assets/images/slides/thumbs/bn3.png" data-src="assets/images/slides/bn3.png">
+                        <div data-thumb="assets/images/slides/thumbs/bn3.jpeg" data-src="assets/images/slides/bn3.jpeg">
                           
                         </div> 
                         <div data-thumb="assets/images/slides/thumbs/bn2.png" data-src="assets/images/slides/bn2.png">
