--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<header id="head" class="secondary">
             <div class="container">
                     <h1>Contact Us</h1>
-                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing eliras scele!</p> -->
+                    <p>Transforming Students into Achievers.</p>
                 </div>
     </header>
 
