--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- /Header -->
 
   <div class="container">
-    <div class="row">
-					<div class="col-md-3">
-						<div class="grey-box-icon">
+    <div class="row" >
+					<div class="col-md-3" >
+						<div class="grey-box-icon" style="height: 30rem;">
 							<div class="icon-box-top grey-box-icon-pos">
 								<img src="assets/images/1.png" alt="" />
 							</div><!--icon box top -->
@@ -96,7 +96,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div><!--grey box -->
 					</div><!--/span3-->
 					<div class="col-md-3">
-						<div class="grey-box-icon">
+						<div class="grey-box-icon" style="height: 30rem;">
 							<div class="icon-box-top grey-box-icon-pos">
 								<img src="assets/images/2.png" alt="" />
 							</div><!--icon box top -->
@@ -106,7 +106,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div><!--grey box -->
 					</div><!--/span3-->
 					<div class="col-md-3">
-						<div class="grey-box-icon">
+						<div class="grey-box-icon" style="height: 30rem;">
 							<div class="icon-box-top grey-box-icon-pos">
 								<img src="assets/images/3.png" alt="" />
 							</div><!--icon box top -->
@@ -116,7 +116,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div><!--grey box -->
 					</div><!--/span3-->
 					<div class="col-md-3">
-						<div class="grey-box-icon">
+						<div class="grey-box-icon" style="height: 30rem;">
 							<div class="icon-box-top grey-box-icon-pos">
 								<img src="assets/images/4.png" alt="" />
 							</div><!--icon box top -->
@@ -126,9 +126,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div><!--grey box -->
 					</div><!--/span3-->
           <div class="col-md-3">
-						<div class="grey-box-icon">
+						<div class="grey-box-icon" style="height: 30rem;">
 							<div class="icon-box-top grey-box-icon-pos">
-								<img src="assets/images/1.png" alt="" />
+								<img src="assets/images/cimg3.png" alt="" />
 							</div><!--icon box top -->
 							<h4>Special Competitive Exam Preparation</h4>
 							<p>We offer dedicated coaching programs for exams like NEET, JEE, KCET, etc.</p>
@@ -136,9 +136,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div><!--grey box -->
 					</div>
           <div class="col-md-3">
-						<div class="grey-box-icon">
+						<div class="grey-box-icon" style="height: 30rem;">
 							<div class="icon-box-top grey-box-icon-pos">
-								<img src="assets/images/2.png" alt="" />
+								<img src="assets/images/cimg4.png" alt="" />
 							</div><!--icon box top -->
 							<h4>NIOS Special Batch Classes</h4>
 							<map>We provide specialized coaching for students enrolled in NIOS.</map>
