--- a/videos.html
+++ b/videos.html
@@ -50,8 +50,8 @@
 
 		<header id="head" class="secondary">
             <div class="container">
-                    <h1>Online Videos</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing eliras scele!</p>
+                    <h1>Classes Photos</h1>
+                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing eliras scele!</p> -->
                 </div>
     </header>
 
@@ -63,20 +63,20 @@
 				<section id="portfolio" class="page-section section appear clearfix">
 					<br />
 					<br />
-					<p>
+					<!-- <p>
 						At lorem Ipsum available, but the majority have suffered alteration in some form by injected huffered altehe majority have suffered alteration in some form by injected huffered alteration in some form by injected humour.uffered alteration in some form by injected h
 					<br />
 						<br />
-					</p>
+					</p> -->
 
 
 					<div class="row">
 						<nav id="filter" class="col-md-12 text-center">
 							<ul>
 								<li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
-								<li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">Development</a></li>
-								<li><a href="#" class="btn-theme btn-small" data-filter=".photography">Designing</a></li>
-								<li><a href="#" class="btn-theme btn-small" data-filter=".print">Tools</a></li>
+								<li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">Classes</a></li>
+								<li><a href="#" class="btn-theme btn-small" data-filter=".photography">Courses</a></li>
+								<!-- <li><a href="#" class="btn-theme btn-small" data-filter=".print">Tools</a></li> -->
 							</ul>
 						</nav>
 						<div class="col-md-12">
@@ -85,10 +85,10 @@
 
 									<article class="col-sm-4 isotopeItem webdesign">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img1.jpg" alt="" />
+											<img src="assets/images/portfolio/ph1.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img1.jpg" class="fancybox">
+													<a href="assets/images/portfolio/ph1.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
@@ -98,10 +98,10 @@
 
 									<article class="col-sm-4 isotopeItem photography">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img2.jpg" alt="" />
+											<img src="assets/images/portfolio/ph2.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img2.jpg" class="fancybox">
+													<a href="assets/images/portfolio/ph2.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
@@ -112,10 +112,10 @@
 
 									<article class="col-sm-4 isotopeItem photography">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img3.jpg" alt="" />
+											<img src="assets/images/portfolio/ph3.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img3.jpg" class="fancybox">
+													<a href="assets/images/portfolio/ph3.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
@@ -125,10 +125,10 @@
 
 									<article class="col-sm-4 isotopeItem print">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img4.jpg" alt="" />
+											<img src="assets/images/portfolio/ph4.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img4.jpg" class="fancybox">
+													<a href="assets/images/portfolio/ph4.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
@@ -138,10 +138,10 @@
 
 									<article class="col-sm-4 isotopeItem photography">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img5.jpg" alt="" />
+											<img src="assets/images/portfolio/ph5.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img5.jpg" class="fancybox">
+													<a href="assets/images/portfolio/ph5.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
@@ -151,10 +151,10 @@
 
 									<article class="col-sm-4 isotopeItem webdesign">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img6.jpg" alt="" />
+											<img src="assets/images/portfolio/ph6.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img6.jpg" class="fancybox">
+													<a href="assets/images/portfolio/ph6.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
@@ -164,10 +164,10 @@
 
 									<article class="col-sm-4 isotopeItem print">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img7.jpg" alt="" />
+											<img src="assets/images/portfolio/ph7.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="images/portfolio/img7.jpg" class="fancybox">
+													<a href="images/portfolio/ph7.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
@@ -177,10 +177,10 @@
 
 									<article class="col-sm-4 isotopeItem photography">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img8.jpg" alt="" />
+											<img src="assets/images/portfolio/ph8.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="images/portfolio/img8.jpg" class="fancybox">
+													<a href="images/portfolio/ph8.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
@@ -190,10 +190,10 @@
 
 									<article class="col-sm-4 isotopeItem print">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img9.jpg" alt="" />
+											<img src="assets/images/portfolio/ph1.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="images/portfolio/img9.jpg" class="fancybox">
+													<a href="images/portfolio/ph1.png" class="fancybox">
 														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
