--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             <!-- Sidebar -->
             <aside class="col-sm-4 sidebar sidebar-right">
-              <img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" >
+              <img src="assets/images/about1.jpg" alt="" class="img-rounded pull-right" style="height: 30rem;" >
                 <!-- <div class="panel">
                     <h4>Latest News</h4>
                     <ul class="list-unstyled list-spaces">
