--- a/contact.html
+++ b/contact.html
@@ -108,10 +108,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										560008, Landmark - Opposite to Raymond showroom</p>
 									
 									<h5>Email</h5>
-									<p>info@webthemez.com</p>
+									<p>singh.maken@gmail.com</p>
 									
 									<h5>Phone</h5>
-									<p>+09 123 1234 123</p>
+									<p>+91 9886902535</p>
 								</div>
 							</div> 
 						</div> 						
