--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               
           
           <!-- <div class="col-md-4"><div class="title-box clearfix "><h2 class="title-box_primary">Up Coming Courses</h2></div>  -->
-            <div class="list styled custom-list">
+            <!-- <div class="list styled custom-list">
             <ul>
             <li><a title="Snatoque penatibus et magnis dis partu rient montes ascetur ridiculus mus." href="#">Mathematics and Computer Science</a></li>
             <li><a title="Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus." href="#">Mathematics and Philosophy</a></li>
@@ -224,7 +224,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <li><a title="Snatoque penatibus et magnis dis partu rient montes ascetur ridiculus mus." href="#">Classical Archaeology and Ancient History</a></li>
             <li><a title="Fusce feugiat malesuada odio. Morbi nunc odio gravida at cursus nec luctus." href="#">Physics and Philosophy</a></li>
             </ul>
-            </div>
+            </div> -->
          </div>
       </div>
       </section>
