--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="newsBox">
                         <div class="thumbnail">
-                            <figure><img src="assets/images/news2.jpg" alt=""></figure>
+                            <figure><img src="assets/images/cl1.jpeg" alt=""></figure>
                             <div class="caption maxheight2">
                             <div class="box_inner">
                                         <div class="box">
-                                            <p class="title"><h5>Counselling Rooms</h5></p>
-                                            <p>We provide dedicated counselling rooms fostering a stress-free and informative environment for students.</p>
+                                            <!-- <p class="title"><h5>Counselling Rooms</h5></p> -->
+                                            <p>Malus Coaching Classes Provided extensive support for the development of our child and today our child scored unexpected High score.</p>
                                         </div> 
                                 </div>
                             </div>
@@ -173,12 +173,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="newsBox">
                         <div class="thumbnail">
-                            <figure><img src="assets/images/news3.jpg" alt=""></figure>
+                            <figure><img src="assets/images/cl2.jpeg" alt=""></figure>
                             <div class="caption maxheight2">
                             <div class="box_inner">
                                         <div class="box">
-                                            <p class="title"><h5>Trained Counselors</h5></p>
-                                            <p>Our counselors undergo rigorous training to understand the needs of students and help them overcome challenges.</p>
+                                            <!-- <p class="title"><h5>Trained Counselors</h5></p> -->
+                                            <p>Malus Coaching Classes provided extensive support for our child's development. Today, our child scored an unexpectedly high score, exceeding all our expectations.</p>
                                         </div> 
                                 </div>
                             </div>
@@ -188,12 +188,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="newsBox">
                         <div class="thumbnail">
-                            <figure><img src="assets/images/news4.jpg" alt=""></figure>
+                            <figure><img src="assets/images/cl3.jpg" alt=""></figure>
                             <div class="caption maxheight2">
                            <div class="box_inner">
                                         <div class="box">
-                                            <p class="title"><h5>Digital Classrooms & Online Knowledge Sharing</h5></p>
-                                            <p> We are pioneers in implementing digital classrooms and online learning platforms for a dynamic learning experience.</p>
+                                            <!-- <p class="title"><h5>Digital Classrooms & Online Knowledge Sharing</h5></p> -->
+                                            <p> Malus Coaching Classes provided extensive support for the development of our child. Today, our child scored unexpectedly high marks, surpassing all our expectations.</p>
                                         </div> 
                                 </div>
                             </div>
