--- a/about.html
+++ b/about.html
@@ -125,10 +125,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <span class="pos">CEO</span>
                         <div class="team-socials">
                             <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
+                            <!-- <a href="#"><i class="fa fa-google-plus"></i></a> -->
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                            <!-- <a href="#"><i class="fa fa-dribbble"></i></a> -->
+                            <a href="#"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -241,11 +241,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
   </div>
         <div class="social text-center">
-          <a href="#"><i class="fa fa-twitter"></i></a>
+          <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
           <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-dribbble"></i></a>
-          <a href="#"><i class="fa fa-flickr"></i></a>
-          <a href="#"><i class="fa fa-github"></i></a>
+          <!-- <a href="#"><i class="fa fa-dribbble"></i></a> -->
+          <!-- <a href="#"><i class="fa fa-flickr"></i></a> -->
+          <a href="#"><i class="fa fa-instagram"></i></a>
         </div>
   
         <div class="clear"></div>
