--- a/courses.html
+++ b/courses.html
@@ -65,7 +65,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	At Malus Coaching, we offer a wide range of courses designed to help you achieve your personal and professional goals. Our expert coaches provide personalized instruction and support to ensure your success.
 </p>
 <br/>
-<ul class="list-unstyled video-list-thumbs row">
+<!-- <ul class="list-unstyled video-list-thumbs row">
 	<li class="col-lg-3 col-sm-4 col-xs-6">
 		<a href="#" title="Claudio Bravo, antes su debut con el Barça en la Liga">
 			<img src="http://i.ytimg.com/vi/ZKOtE9DOwGE/mqdefault.jpg" alt="Barca" class="img-responsive" height="130px" />
@@ -98,7 +98,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<span class="duration">03:15</span>
 		</a>
 	</li> 
-</ul>
+</ul> -->
 
 </div>
 	<div id="courses">
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="featured-box"> 
 						<div class="text">
 							<h3>CBSE</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							Join us today and experience the difference that quality education can make. Let Malus Coaching Classes guide your child towards achieving their highest potential and securing impressive results in their CBSE examinations.
 						</div>
 					</div>
 				</div>
@@ -117,7 +117,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="featured-box"> 
 						<div class="text">
 							<h3>ICSE</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							At Malus Coaching Classes, we offer expert ICSE tuition with personalized attention and proven teaching methods. Our experienced faculty ensures students excel in their exams. Join us for outstanding academic success in the ICSE curriculum.
 						</div>
 					</div>
 				</div>
@@ -125,7 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="featured-box"> 
 						<div class="text">
 							<h3> State Board</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							At Malus Coaching Classes, we offer specialized State Board tuition with experienced educators dedicated to each student's success. Our personalized teaching methods ensure that students grasp key concepts and achieve outstanding academic results. Join us to set your child on the path to success!
 						</div>
 					</div>
 				</div>
@@ -135,7 +135,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="featured-box"> 
 						<div class="text">
 							<h3>Competitive Exam</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							With Malus Coaching Classes by your side, you can embark on your journey to success with confidence. Let us help you realize your potential and achieve remarkable results in your competitive exams. Enroll now and take the first step towards a brighter future
 						</div>
 					</div>
 				</div>
@@ -143,7 +143,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="featured-box"> 
 						<div class="text">
 							<h3>NIOS</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							At Malus Coaching, we understand the unique needs of students pursuing their education through the National Institute of Open Schooling (NIOS). Our comprehensive NIOS tuition program is designed to provide personalized support and guidance to students at every step of their academic journey.
 						</div>
 					</div>
 				</div>
@@ -292,11 +292,11 @@ Experience the difference at Malus Coaching Classes – where personalized atten
       </div>
     </div>
           <div class="social text-center">
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
             <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-flickr"></i></a>
-            <a href="#"><i class="fa fa-github"></i></a>
+            <!-- <a href="#"><i class="fa fa-dribbble"></i></a> -->
+            <!-- <a href="#"><i class="fa fa-flickr"></i></a> -->
+            <a href="#"><i class="fa fa-instagram"></i></a>
           </div>
     
           <div class="clear"></div>
