--- a/videos.html
+++ b/videos.html
@@ -50,7 +50,7 @@
 
 		<header id="head" class="secondary">
             <div class="container">
-                    <h1>Classes Photos</h1>
+                    <h1>Our Photo gallery</h1>
                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing eliras scele!</p> -->
                 </div>
     </header>
@@ -319,11 +319,11 @@
       </div>
     </div>
           <div class="social text-center">
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
             <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-flickr"></i></a>
-            <a href="#"><i class="fa fa-github"></i></a>
+            <!-- <a href="#"><i class="fa fa-dribbble"></i></a> -->
+            <!-- <a href="#"><i class="fa fa-flickr"></i></a> -->
+            <a href="#"><i class="fa fa-instagram"></i></a>
           </div>
     
           <div class="clear"></div>
