--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
     </div>
           <div class="social text-center">
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
             <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-flickr"></i></a>
-            <a href="#"><i class="fa fa-github"></i></a>
+            <!-- <a href="#"><i class="fa fa-dribbble"></i></a> -->
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <!-- <a href="#"><i class="fa fa-github"></i></a> -->
           </div>
     
           <div class="clear"></div>
