--- a/index.html
+++ b/index.html
@@ -145,6 +145,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
      						<!-- <p><a href="#"><em>Read More</em></a></p> -->
 						</div><!--grey box -->
 					</div>
+          <div class="col-md-3" >
+						<div class="grey-box-icon" style="height: 30rem;">
+              <img src="assets/images/home1.png" style="width: 100%; height: 100%;" alt="">
+						<!--grey box -->
+					</div>
+				</div>
+          <div class="col-md-3" >
+						<div class="grey-box-icon" style="height: 30rem;">
+              <img src="assets/images/home2.png" style="width: 100%; height: 100%;" alt="">
+						<!--grey box -->
+					</div>
 				</div>
     </div>
     <!-- <section style="width: 100%; height: 50vh; padding-top: 2rem; padding-left: 60px;">
