--- a/videos.html
+++ b/videos.html
@@ -83,13 +83,27 @@
 							<div class="row">
 								<div class="portfolio-items isotopeWrapper clearfix" id="3">
 
+
 									<article class="col-sm-4 isotopeItem webdesign">
 										<div class="portfolio-item">
 											<img src="assets/images/portfolio/ph1.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
 													<a href="assets/images/portfolio/ph1.png" class="fancybox">
-														<h5>Project Title</h5>
+														<h5>Our Office</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/10thcbsc.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/10thcbsc.jpeg" class="fancybox">
+														<h5>10th CBSE</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -98,11 +112,288 @@
 
 									<article class="col-sm-4 isotopeItem photography">
 										<div class="portfolio-item">
+											<img src="assets/images/gallery/10thcbsc.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/10thcbsc.jpeg" class="fancybox">
+														<h5>10th CBSE</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/10thicse.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/10thicse.jpeg" class="fancybox">
+														<h5>10th Icse</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/10thicse.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/10thicse.jpeg" class="fancybox">
+														<h5>10th Icse</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/10thstateboard.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/10thstateboard.jpeg" class="fancybox">
+														<h5>10th State Board</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/11thcbscscience1.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/11thcbscscience1.jpeg" class="fancybox">
+														<h5>11th CBSE Science</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/11thcbse.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/11thcbse.jpeg" class="fancybox">
+														<h5>11th CBSE Science</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/11tncbscscience.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/11tncbscscience.jpeg" class="fancybox">
+														<h5>11th CBSE Science</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/7thcbse.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/7thcbse.jpeg" class="fancybox">
+														<h5>7th CBSE</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/8thcbsc.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/8thcbsc.jpeg" class="fancybox">
+														<h5>8th CBSE</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/8thcbse.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/8thcbse.jpeg" class="fancybox">
+														<h5>8th CBSE</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/commerse1.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/commerse1.jpeg" class="fancybox">
+														<h5>11th Commerce</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/exam1.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/exam1.jpeg" class="fancybox">
+														<h5>Class Test</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<!-- <p>new</p> -->
+
+									
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/10thstateboard.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/10thstateboard.jpeg" class="fancybox">
+														<h5>10th State Board</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/11thcbscscience1.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/11thcbscscience1.jpeg" class="fancybox">
+														<h5>11th CBSE Science</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/11thcbse.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/11thcbse.jpeg" class="fancybox">
+														<h5>11th CBSE Science</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/11tncbscscience.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/11tncbscscience.jpeg" class="fancybox">
+														<h5>11th CBSE Science</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/7thcbse.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/7thcbse.jpeg" class="fancybox">
+														<h5>7th CBSE</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/8thcbsc.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/8thcbsc.jpeg" class="fancybox">
+														<h5>8th CBSE</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/8thcbse.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/8thcbse.jpeg" class="fancybox">
+														<h5>8th CBSE</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/commerse1.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/commerse1.jpeg" class="fancybox">
+														<h5>11th Commerce</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="assets/images/gallery/exam1.jpeg" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="assets/images/gallery/exam1.jpeg" class="fancybox">
+														<h5>Class Test</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
 											<img src="assets/images/portfolio/ph2.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
 													<a href="assets/images/portfolio/ph2.png" class="fancybox">
-														<h5>Project Title</h5>
+														<h5>Our Office</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -116,7 +407,7 @@
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
 													<a href="assets/images/portfolio/ph3.png" class="fancybox">
-														<h5>Project Title</h5>
+														<h5>Our Office</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -129,7 +420,7 @@
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
 													<a href="assets/images/portfolio/ph4.png" class="fancybox">
-														<h5>Project Title</h5>
+														<h5>Our Office</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -142,7 +433,7 @@
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
 													<a href="assets/images/portfolio/ph5.png" class="fancybox">
-														<h5>Project Title</h5>
+														<h5>7th ICSE</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -155,7 +446,7 @@
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
 													<a href="assets/images/portfolio/ph6.png" class="fancybox">
-														<h5>Project Title</h5>
+														<h5>7th ICSE</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -168,7 +459,7 @@
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
 													<a href="images/portfolio/ph7.png" class="fancybox">
-														<h5>Project Title</h5>
+														<h5>Our Office</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -181,7 +472,7 @@
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
 													<a href="images/portfolio/ph8.png" class="fancybox">
-														<h5>Project Title</h5>
+														<h5>9th CBSE</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
