--- a/videos.html
+++ b/videos.html
@@ -73,7 +73,7 @@
 					<div class="row">
 						<nav id="filter" class="col-md-12 text-center">
 							<ul>
-								<li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
+								<!-- <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li> -->
 								<li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">Classes</a></li>
 								<li><a href="#" class="btn-theme btn-small" data-filter=".photography">Courses</a></li>
 								<!-- <li><a href="#" class="btn-theme btn-small" data-filter=".print">Tools</a></li> -->
