--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 	<!-- Header -->
 	<header id="head">
-		<div class="container">
-            <img src="assets/images/slides/thumbs/bn3.jpeg" alt=""> 
+            <img src="assets/images/slides/thumbs/bn3.jpeg" alt="" /> 
             
 					<!-- <div class="fluid_container">                       
                     <div class="camera_wrap camera_emboss pattern_1" id="camera_wrap_4">
